# PySqliteDatabase

./: .gitignore  README.md  person.db  pyproject.toml  requirements.txt  setup.py  test.py
PyDataSqlite/: database.py
PySqliteDatabase/: database.py
src/PySqliteDatabase/: database.py
src/pysqlitedatabase/: __init__.py  database.py
